--- a/.github/workflows/opencommit.yaml
+++ b/.github/workflows/opencommit.yaml
@@ -20,7 +20,9 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: di-sukharev/opencommit@github-action-v1.0.4
+
+      - name: OpenCommit — improve commits with AI 🧙
+        uses: di-sukharev/opencommit@github-action-v1.0.4
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -36,6 +38,6 @@ jobs:
           OCO_OPENAI_BASE_PATH: ''
           OCO_DESCRIPTION: true
           OCO_EMOJI: true
-          OCO_MODEL: gpt-3.5-turbo
+          OCO_MODEL: gpt-3.5-turbo-0125
           OCO_LANGUAGE: en
           OCO_PROMPT_MODULE: conventional-commit
