--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 #Maven
 target/
+pom.xml.bak
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
 release.properties
 .flattened-pom.xml
+
+node_modules/
 
 # Eclipse
 .project
