--- a/.github/workflows/opencommit.yaml
+++ b/.github/workflows/opencommit.yaml
@@ -36,7 +36,7 @@ jobs:
           OCO_TOKENS_MAX_INPUT: 4096
           OCO_TOKENS_MAX_OUTPUT: 500
           OCO_OPENAI_BASE_PATH: ''
-          OCO_DESCRIPTION: true
+          OCO_DESCRIPTION: false
           OCO_EMOJI: true
           OCO_MODEL: gpt-3.5-turbo-0125
           OCO_LANGUAGE: en
