--- a/.github/workflows/opencommit.yaml
+++ b/.github/workflows/opencommit.yaml
@@ -2,9 +2,9 @@ name: 'OpenCommit Action'
 
 on:
   push:
-    # this list of branches is often enough,
-    # but you may still ignore other public branches
-    branches-ignore: [main master dev development release]
+    branches-ignore:
+      - main
+      - renovate/*
 
 jobs:
   opencommit:
@@ -37,7 +37,7 @@ jobs:
           OCO_TOKENS_MAX_OUTPUT: 500
           OCO_OPENAI_BASE_PATH: ''
           OCO_DESCRIPTION: false
-          OCO_EMOJI: true
+          OCO_EMOJI: false
           OCO_MODEL: gpt-3.5-turbo-0125
           OCO_LANGUAGE: en
           OCO_PROMPT_MODULE: conventional-commit
