--- a/src/main/webui/package.json
+++ b/src/main/webui/package.json
@@ -12,6 +12,8 @@
       "@popperjs/core": "^2.11.8",
       "@preact/compat": "^17.1.2",
       "@rehooks/local-storage": "^2.4.5",
+      "@version-checker/browser": "^3.1.0",
+      "@version-checker/core": "^3.1.0",
       "bootstrap": "^5.3.3",
       "preact": "^10.22.0",
       "preact-i18n": "^2.4.0-preactx",
