--- a/.github/workflows/main-push.yml
+++ b/.github/workflows/main-push.yml
@@ -32,6 +32,18 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: ☕ Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: "21"
+          distribution: "adopt"
+
+      - name: 🧹 Clean and Compile
+        run: $MVN clean compile
+
+      - name: 🧪 Run Tests
+        run: $MVN test --batch-mode --fail-at-end
+
       - name: 📡 SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@v2
         env:
