--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -45,6 +45,16 @@ jobs:
         with:
           fail_on_test_failures: true
 
+      - name: Extract branch name
+        shell: bash
+        run: echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
+        id: extract_branch
+
+      - name: 📡 SonarCloud Scan
+        run: $MVN verify sonar:sonar -Dsonar.organization=magnus-ullberg -Dsonar.projectKey=magnus-ullberg_startpunkt -Dsonar.host.url=https://sonarcloud.io -Dsonar.branch.name=${{ steps.extract_branch.outputs.branch }}
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
       - name: 📦 Package Native Application
         run: $MVN package -Pnative -DskipTests -Dquarkus.native.container-build=true
 
