--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>us.ullberg</groupId>
   <artifactId>startpunkt</artifactId>
-  <version>0.9.3</version>
+  <version>0.10.0-SNAPSHOT</version>
 
   <scm>
     <developerConnection>scm:git:https://github.com/ullbergm/startpunkt.git</developerConnection>
