--- a/src/main/webui/package.json
+++ b/src/main/webui/package.json
@@ -36,6 +36,7 @@
       "babel-jest": "^30.0.4",
       "identity-obj-proxy": "^3.0.0",
       "jest": "^30.0.4",
+      "jest-axe": "^9.0.0",
       "jest-environment-jsdom": "^30.0.4",
       "jest-junit": "^16.0.0",
       "sass": "^1.77.6",
